Kubernetes_Server/Template/Devops/gitlab/gitlab-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-redis
  namespace: devops-gitlab
  labels:
    name: gitlab-redis
spec:
  ports:
    - name: gitlab-redis
      port: 6379
      targetPort: gitlab-redis
  selector:
    name: gitlab-redis
