Kubernetes_Server/Template/Devops/gitlab/gitlab-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: devops-gitlab
  labels:
    name: gitlab
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: ssh
      port: 22
      targetPort: ssh
  selector:
    name: gitlab
