Kubernetes_Server/Template/Devops/gitlab/gitlab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab
  namespace: devops-gitlab
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: gitlab.erge.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab
            port:
              number: 80
